--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@ mirror
 static/font
 static/node_modules
 static/js/config.js
+static/js/jquery.marquee.min.js
 static/css/weather-icons.min.css
 *.pyc
-static/js/jquery.newsTicker.min.js
-.*
